# python_api_gateway

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
docker/: Dockerfile
src/: main.py
src/api/: cache.py
src/api/v1/: film.py  genre.py  person.py  router.py
src/api/v1/schemas/: actor.py  director.py  film.py  genre.py  person.py  writer.py
src/common/: circuit_breaker.py  coder.py  exceptions.py  retry.py  uvloop.py
src/common/key_value_database/: __init__.py  interfaces.py  redis.py  redis_key_value_database.py
src/common/search_engine/: __init__.py  elastic.py  elastic_search_engine.py  filter_fields.py  filtersets.py  interfaces.py
src/core/: config.py  logger.py
src/models/: actor.py  base.py  director.py  film.py  genre.py  person.py  writer.py
src/providers/: cache.py  key_value_database.py  search_engine.py  settings.py
src/providers/services/: __init__.py  film.py  genre.py  person.py
src/services/: base.py  film.py  genre.py  person.py
tests/: conftest.py
tests/common/search_engine/: test_filter_fields.py  test_filterset.py
tests/factories/: actor.py  director.py  film.py  genre.py  person.py  writer.py
tests/search_engine/: test_filter_fields.py  test_filterset.py
tests/services/: test_base_service.py  test_film_service.py  test_genre_service.py  test_person_service.py
