[tool.poetry]
name = "api gateway"
version = "0.1.0"
description = ""
authors = ["Ilya Boyur <ilya.boyur.r@ya.ru>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
types-reportlab = "^4.3.1.20250401"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# Mypy configuration:
# https://mypy.readthedocs.io/en/latest/config_file.html
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_errors = false
ignore_missing_imports = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

exclude = ["^(src.data.migrations).*$", "^tests.*$"]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["src.migrations.versions.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "factory.*", "sqlalchemy_utils.*", "choicesenum.*",
    "itsdangerous.*", "pytest_async_sqlalchemy.*", "sqlalchemy.testing", "transformers.*",
    "fuzzysearch.*", "openpyexcel.*"
]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-vv"
testpaths = [
    "tests",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning"
]
asyncio_mode = "auto"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
uvloop = { version = "~0.19.0" }
fastapi = "~0.95.0"
orjson = "^3.10.18"
pydantic = "~1.10.7"
uvicorn = "~0.20.0"
python-multipart = "~0.0.5"
# dependency-injector = "~4.45.0"
python-dotenv = "~0.21.0"
loguru = "^0.7.0"
# sentry-sdk = "^1.19.1"

# DBs
redis = {extras = ["hiredis"], version = "^6.0.0"}
elasticsearch = {extras = ["async"], version = "~8.18.0"}

# SQLAlchemy = { version = ">=2,<3", extras = ["asyncio", "mypy"] }
# SQLAlchemy-Utils = "^0.41.2"
# alembic = {version = "^1.10.3", extras = ["tz"]}
# asyncpg = "^0.27.0"
# greenlet = "^3.0.3"
# sqlalchemy-filterset = ">=2.3.0"

httpx = {version = "^0.24.1", extras = ["socks"]}
choicesenum = "~0.7.0"
itsdangerous = "~2.1.2"
tiktoken = "~0.2.0"
fuzzysearch = "~0.7.3"
openpyexcel = "^2.5.14"
aiofiles = "^23.2.1"

# Typehinting
mypy = "~1.15.0"
mypy-extensions = "^1.0.0"

# Tests
pytest = "^7.3.0"
pytest-asyncio = "^0.18.1"
pytest-async-sqlalchemy = "^0.2.0"
pytest-lazy-fixture = "^0.6.3"
pytest-xdist = "^2.5.0"
factory-boy = "^3.2.1"
pytest-httpx = "^0.22.0"
freezegun = "^1.2.2"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"

# Formatting
pyjwt = "^2.7.0"
ruff = "^0.5.6"
types-aiofiles = "^23.2.0.20240403"
debugpy = "^1.8.1"
# xmltodict = "^0.13.0"
ipython = "^8.25.0"
# types-xmltodict = "^0.13.0.3"
# taskiq = "^0.11.3"
# taskiq-aio-pika = "^0.4.0"
# taskiq-fastapi = "^0.3.1"
# faststream = {extras = ["cli", "rabbit"], version = "^0.5.25"}
# taskiq-faststream = {extras = ["rabbit"], version = "^0.1.8"}
# aioboto3 = "^13.0.1"
# types-aioboto3 = "^13.0.1"
# pillow = "^10.3.0"
# pyromark = ">=0.7.1"
# typer = "^0.12.5"
# cairosvg = "^2.7.1"
# svglib = "^1.5.1"
# reportlab = "^4.3.1"

